--- a/action.yml
+++ b/action.yml
@@ -17,12 +17,15 @@ inputs:
     description: "Description of the event"
   tags:
     required: true
-    description: "Space separated list of Tags for the event, we auto append hostname:$(hostname)"
+    description: "Space separated list of Tags for the event"
   alert_type:
      required: true
      description: "Type of the event, one of: error,warning,info,success,user_update,recommendation,snapshot"
      default: "info"
-
+  append_hostname_tag:
+    required: false
+    description: "Should we append the hostname as a tag to the event, set this to the key of the tag"
+    default: ""
 runs:
   using: "composite"
   steps:
@@ -31,5 +34,6 @@ runs:
     - shell: bash
       run: |
         export DATADOG_API_KEY=${{ inputs.api_key }}
+        export APPEND_HOSTNAME_TAG=${{ inputs.append_hostname_tag }}
         ${{ github.action_path }}/datadog-notify.sh "${{ inputs.title }}" "${{ inputs.text }}" "${{ inputs.alert_type }}" "${{ inputs.tags }}"
 
