--- a/README.yaml
+++ b/README.yaml
@@ -5,11 +5,12 @@
 #
 
 # Name of this project
-name: example-github-action-composite
+name: github-action-datadog-notify
 
 # Tags of this project
 tags:
   - github-action
+  - datadog
 
 # Logo for this project
 #logo: docs/logo.png
@@ -18,13 +19,13 @@ tags:
 license: "APACHE2"
 
 # Canonical GitHub repo
-github_repo: cloudposse/example-github-action-composite
+github_repo: cloudposse/github-action-datadog-notify
 
 # Badges to display
 badges:
   - name: "Latest Release"
-    image: "https://img.shields.io/github/release/cloudposse/example-github-action-composite.svg"
-    url: "https://github.com/cloudposse/example-github-action-composite/releases/latest"
+    image: "https://img.shields.io/github/release/cloudposse/github-action-datadog-notify.svg"
+    url: "https://github.com/cloudposse/github-action-datadog-notify/releases/latest"
   - name: "Slack Community"
     image: "https://slack.cloudposse.com/badge.svg"
     url: "https://slack.cloudposse.com"
@@ -32,11 +33,10 @@ badges:
 related: []
 
 # Short description of this project
-description: Template repository of composite GitHub Action
+description: Create Datadog Notify Event
 
 introduction: |-
-  This is template repository to create composite GitHub Actions. 
-  Feel free to use it as reference and starting point.
+  This repository contains the action for sending an event to datadog.
 
 references:
   - name: "github-actions-workflows"
@@ -48,25 +48,48 @@ references:
 
 # How to use this project
 usage: |-
-  ```yaml
-    name: Pull Request
-    on:
-      pull_request:
-        branches: [ 'main' ]
-        types: [opened, synchronize, reopened, closed, labeled, unlabeled]
 
-    jobs:
-      context:
-        runs-on: ubuntu-latest
-        steps:
-          - name: Example action
-            uses: cloudposse/example-github-action-composite@main
-            id: example
-            with:
-              param1: true
-  
-        outputs:
-          result: ${{ steps.example.outputs.result1 }}
+  Below is a snippet that will send an event to datadog when a pull request is sync'd.
+  Below uses the `dkershner6/aws-ssm-getparameters-action` to get the datadog api key from ssm.
+
+  ```yaml
+  name: Datadog Notify
+  on:
+    workflow_dispatch:
+
+    pull_request:
+
+  permissions:
+    contents: read
+    pull-requests: write
+    id-token: write
+  jobs:
+    datadog-notify:
+      runs-on: ["self-hosted"]
+      steps:
+        - uses: actions/checkout@v3
+        - name: Configure AWS credentials
+          id: aws-credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            role-to-assume:  ${{ secrets.AWS_ROLE_TO_ASSUME }}
+            role-session-name: "gha-datadog-notify"
+            aws-region: "us-east-1"
+        - uses: dkershner6/aws-ssm-getparameters-action@v1
+          with:
+            parameterPairs: "/datadog/datadog_api_key = DATADOG_API_KEY"
+            # The part before equals is the ssm parameterName, and after is the ENV Variable name for the workflow.
+            # No limit on number of parameters. You can put new lines and spaces in as desired, they get trimmed out.
+            withDecryption: "true" # defaults to true
+
+        - name: Notify Datadog
+          uses: cloudposse/github-action-datadog-notify@init
+          with:
+            api_key: ${{ env.DATADOG_API_KEY }}
+            title: "GitHub Action: ${{ github.event_name }}"
+            text: "GitHub Action: ${{ github.event_name }}"
+            tags: "source:github,repo:${{ github.repository }},event:${{ github.event_name }}"
+            alert_type: "info"
   ```
 
 include:
@@ -74,5 +97,5 @@ include:
 
 # Contributors to this project
 contributors:
-  - name: "Igor Rodionov"
-    github: "goruha"
+  - name: "Ben Smith"
+    github: "Benbentwo"
