--- a/README.yaml
+++ b/README.yaml
@@ -49,6 +49,18 @@ references:
 # How to use this project
 usage: |-
 
+  Minimal Usage:
+  ```yaml
+  - name: Notify Datadog
+    uses: cloudposse/github-action-datadog-notify@main
+    with:
+      api_key: ## ${{ env.DATADOG_API_KEY }} ## ${{secrets.DATADOG_API_KEY}}
+      title: "GitHub Action: ${{ github.event_name }}"
+      text: "GitHub Action: ${{ github.event_name }}"
+      tags: "source:github,repo:${{ github.repository }},event:${{ github.event_name }}"
+      alert_type: "info"
+  ```
+
   Below is a snippet that will send an event to datadog when a pull request is sync'd.
   Below uses the `dkershner6/aws-ssm-getparameters-action` to get the datadog api key from ssm.
 
